@@ -13,7 +13,6 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
-import java.security.spec.X509EncodedKeySpec;
 
 import gurux.dlms.asn.enums.GXOid;
 import gurux.dlms.asn.enums.PkcsObjectIdentifier;
@@ -60,10 +59,10 @@ public class GXPkcs8 {
      *            Base64 string.
      */
     public GXPkcs8(final String data) {
-        String tmp = data.replace("-----BEGIN PUBLIC KEY-----", "");
-        tmp = tmp.replace("-----END PUBLIC KEY-----", "");
-        tmp = tmp.replace("-----BEGIN PRIVATE KEY-----", "");
+        String tmp = data.replace("-----BEGIN PRIVATE KEY-----", "");
         tmp = tmp.replace("-----END PRIVATE KEY-----", "");
+        tmp = tmp.replace("-----BEGIN EC PRIVATE KEY-----", "");
+        tmp = tmp.replace("-----END EC PRIVATE KEY-----", "");
         init(GXCommon.fromBase64(tmp.trim()));
     }
 
@@ -77,94 +76,43 @@ public class GXPkcs8 {
         init(data);
     }
 
-    // version Version,
-    // privateKeyAlgorithm PrivateKeyAlgorithmIdentifier,
-    // privateKey PrivateKey,
-    // attributes [0]
     private void init(final byte[] data) {
         GXAsn1Sequence seq =
                 (GXAsn1Sequence) GXAsn1Converter.fromByteArray(data);
-        // If public key.
-        if (seq.size() == 2) {
-            GXAsn1Sequence tmp = (GXAsn1Sequence) seq.get(0);
+        if (seq.size() < 3) {
+            throw new IllegalArgumentException(
+                    "Wrong number of elements in sequence.");
+        }
+        version = CertificateVersion.forValue(((Number) seq.get(0)).intValue());
+        GXAsn1Sequence tmp = (GXAsn1Sequence) seq.get(1);
+        algorithm = X9ObjectIdentifier.forValue(tmp.get(0).toString());
+        if (algorithm == null) {
             algorithm = PkcsObjectIdentifier.forValue(tmp.get(0).toString());
-            if (algorithm == null) {
-                algorithm = X9ObjectIdentifier.forValue(tmp.get(0).toString());
-            }
-            // Make public key.
-            KeyFactory eckf;
-            try {
-                String name = algorithm.toString().toLowerCase();
-                if (name.contains("rsa")) {
-                    eckf = KeyFactory.getInstance("RSA");
-                } else if (name.endsWith("ecdsa")) {
-                    eckf = KeyFactory.getInstance("EC");
-                } else if (name.contains("ec")) {
-                    eckf = KeyFactory.getInstance("EC");
-                } else {
-                    throw new IllegalStateException(
-                            "Unknown algorithm:" + algorithm.toString());
-                }
-            } catch (NoSuchAlgorithmException e) {
+        }
+        // Make private and public keys.
+        KeyFactory eckf;
+        try {
+            String name = algorithm.toString().toLowerCase();
+            if (name.contains("rsa")) {
+                eckf = KeyFactory.getInstance("RSA");
+            } else if (name.endsWith("ecdsa")) {
+                eckf = KeyFactory.getInstance("EC");
+            } else if (name.contains("ec")) {
+                eckf = KeyFactory.getInstance("EC");
+            } else {
                 throw new IllegalStateException(
-                        algorithm.toString().substring(0, 2)
-                                + "key factory not present in runtime");
+                        "Unknown algorithm:" + algorithm.toString());
             }
-            try {
-                byte[] encodedKey = GXAsn1Converter.toByteArray(seq);
-                X509EncodedKeySpec ecpks = new X509EncodedKeySpec(encodedKey);
-                setPublicKey(eckf.generatePublic(ecpks));
-            } catch (InvalidKeySpecException e) {
-                throw new IllegalArgumentException(e.getMessage());
-            }
-
-            // PublicKeyInfo ::= SEQUENCE {
-            // algorithm AlgorithmIdentifier,
-            // PublicKey BIT STRING
-            // }
-            // AlgorithmIdentifier ::= SEQUENCE {
-            // algorithm OBJECT IDENTIFIER,
-            // parameters ANY DEFINED BY algorithm OPTIONAL
-            // }
-
-        } else {
-            if (seq.size() < 3) {
-                throw new IllegalArgumentException(
-                        "Wrong number of elements in sequence.");
-            }
-            version = CertificateVersion
-                    .forValue(((Number) seq.get(0)).intValue());
-            GXAsn1Sequence tmp = (GXAsn1Sequence) seq.get(1);
-            algorithm = X9ObjectIdentifier.forValue(tmp.get(0).toString());
-            if (algorithm == null) {
-                algorithm =
-                        PkcsObjectIdentifier.forValue(tmp.get(0).toString());
-            }
-            // Make public key.
-            KeyFactory eckf;
-            try {
-                String name = algorithm.toString().toLowerCase();
-                if (name.contains("rsa")) {
-                    eckf = KeyFactory.getInstance("RSA");
-                } else if (name.endsWith("ecdsa")) {
-                    eckf = KeyFactory.getInstance("EC");
-                } else if (name.contains("ec")) {
-                    eckf = KeyFactory.getInstance("EC");
-                } else {
-                    throw new IllegalStateException(
-                            "Unknown algorithm:" + algorithm.toString());
-                }
-            } catch (NoSuchAlgorithmException e) {
-                throw new IllegalStateException(
-                        algorithm.toString().substring(0, 2)
-                                + "key factory not present in runtime");
-            }
-            try {
-                PKCS8EncodedKeySpec ecpks = new PKCS8EncodedKeySpec(data);
-                privateKey = (eckf.generatePrivate(ecpks));
-            } catch (InvalidKeySpecException e) {
-                throw new IllegalArgumentException(e.getMessage());
-            }
+        } catch (NoSuchAlgorithmException e) {
+            throw new IllegalStateException(algorithm.toString().substring(0, 2)
+                    + "key factory not present in runtime");
+        }
+        try {
+            PKCS8EncodedKeySpec ecpks =
+                    new PKCS8EncodedKeySpec(data, tmp.get(0).toString());
+            privateKey = (eckf.generatePrivate(ecpks));
+        } catch (InvalidKeySpecException e) {
+            throw new IllegalArgumentException(e.getMessage());
         }
     }
 
@@ -222,26 +170,10 @@ public class GXPkcs8 {
     }
 
     /**
-     * @param value
-     *            Private key.
-     */
-    public void setPrivateKey(final PrivateKey value) {
-        privateKey = value;
-    }
-
-    /**
      * @return Public key.
      */
     public PublicKey getPublicKey() {
         return publicKey;
-    }
-
-    /**
-     * @param value
-     *            Public key.
-     */
-    public void setPublicKey(final PublicKey value) {
-        publicKey = value;
     }
 
     /**
@@ -254,8 +186,7 @@ public class GXPkcs8 {
      *             IO exception.
      */
     public static GXPkcs8 load(final Path path) throws IOException {
-        String tmp = new String(Files.readAllBytes(path));
-        return new GXPkcs8(tmp);
+        return new GXPkcs8(Files.readString(path));
     }
 
     /**
@@ -268,18 +199,21 @@ public class GXPkcs8 {
      */
     public void save(final Path path) throws IOException {
         StringBuilder sb = new StringBuilder();
-        if (publicKey != null) {
-            sb.append("-----BEGIN PUBLIC KEY-----" + System.lineSeparator());
-            sb.append(GXCommon.toBase64(publicKey.getEncoded()));
-            sb.append(System.lineSeparator() + "-----END PUBLIC KEY-----");
-        } else if (privateKey != null) {
-            sb.append("-----BEGIN PRIVATE KEY-----" + System.lineSeparator());
-            sb.append(GXCommon.toBase64(privateKey.getEncoded()));
-            sb.append(System.lineSeparator() + "-----END PRIVATE KEY-----");
+        if (privateKey != null) {
+            sb.append(
+                    "-----BEGIN EC PRIVATE KEY-----" + System.lineSeparator());
+            sb.append(toPem());
+            sb.append(System.lineSeparator() + "-----END EC PRIVATE KEY-----");
         } else {
-            throw new IllegalArgumentException(
-                    "Public or private key is not set.");
+            throw new IllegalArgumentException("Private key is not set.");
         }
         Files.write(path, sb.toString().getBytes(), StandardOpenOption.CREATE);
+    }
+
+    /**
+     * @return Private key in PEM format.
+     */
+    public String toPem() {
+        return GXCommon.toBase64(privateKey.getEncoded());
     }
 }
